--- a/test_1_front_end/.gitignore
+++ b/test_1_front_end/.gitignore
@@ -1,2 +1,29 @@
+### Linux ###
+*~
+# KDE directory preferences
+.directory
+
+### Node ###
+# Logs
+logs
+*.log
+
+# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
+# Compiled binary addons (http://nodejs.org/api/addons.html)
+build/Release
+dist/
+
+# Dependency directory
+# Deployed apps should consider commenting this line out:
+# see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
+node_modules
+
+# Minified JS and CSS files
+js-dist
+custom.min.css
+
+# Sass
 .sass-cache
 *.css.map
